# algds20242025

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: join.h  list.h
lab1/: CMakeLists.txt  list.h  main.c
lab1/include/: join.h  list.h
lab1/joiner/: CMakeLists.txt  join.c
lab1/list/: CMakeLists.txt  str_list.c
test/: CMakeLists.txt  join.cpp
